--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DATABASE_NAME=licity
 DATABASE_PORT=27017
 API_KEY=123456789
 PORT=3000
+JWT_SECRET='123456789'
 
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=root
